--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
   "scripts": {
     "format": "prettier --write *.js **/*.js",
     "dev": "nodemon app.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "supertest": "^7.0.0"
