--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "format": "prettier --write *.js **/*.js",
     "dev": "nodemon app.js"
-
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -16,7 +15,9 @@
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
