--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "Node-Express-CRUD",
-  "version": "1.0.0",
-  "main": "app.js",
-  "license": "MIT",
-  "type": "module",
-  "scripts": {
-    "format": "prettier --write *.js **/*.js",
-    "dev": "nodemon app.js"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "joi": "^17.13.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.4",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0",
-    "prettier": "^3.2.5",
-    "supertest": "^7.0.0"
-  }
+    "name": "Node-Express-CRUD",
+    "version": "1.0.0",
+    "main": "app.js",
+    "license": "MIT",
+    "type": "module",
+    "scripts": {
+        "format": "prettier --write *.js **/*.js",
+        "dev": "nodemon app.js",
+        "start": "node app.js"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "joi": "^17.13.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.3.4",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.0",
+        "prettier": "^3.2.5",
+        "supertest": "^7.0.0"
+    }
 }
